--- a/galaxy.yml
+++ b/galaxy.yml
@@ -3,7 +3,7 @@ name: "galaxy-repos"
 version: "0.0.3"
 readme: "README.md"
 authors:
-    - "Helena Rasche (https://github.com/erasche)"
+    - "Helena Rasche (https://github.com/hexylena)"
     - "Giuseppe Profiti (https://github.com/profgiuseppe)"
 license:
     - "MIT"
